# uxum

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md  clippy.toml
.config/: nextest.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: cd.yml  ci.yml
examples/advanced_server/: Cargo.toml  build.rs  config.yaml  main.rs  tls.crt  tls.key
examples/advanced_server/proto/advanced_server/: v1.proto
examples/advanced_server/src/: main.rs
examples/basic_server/: Cargo.toml  main.rs
examples/basic_server/src/: main.rs
examples/custom_layer/: Cargo.toml
examples/custom_layer/src/: main.rs
examples/inner_service/: Cargo.toml  config.yaml  main.rs
examples/inner_service/src/: main.rs
examples/minimal/: Cargo.toml  main.rs
examples/minimal/src/: main.rs
examples/redis-kv/: Cargo.toml  config.yaml
examples/redis-kv/src/: main.rs
src/: apidoc.rs  auth.rs  behavior.rs  builder.rs  config.rs  crypto.rs  errors.rs  ext.rs  handle.rs  lib.rs  logging.rs  metrics.rs  notify.rs  otel.rs  prelude.rs  probes.rs  reexport.rs  response.rs  runtime.rs  signal.rs  spiffe.rs  state.rs  telemetry.rs  tracing.rs  util.rs  watchdog.rs
src/auth/: config.rs  errors.rs  extractor.rs  layer.rs  mod.rs  provider.rs  token.rs  user.rs
src/builder/: app.rs  mod.rs  server.rs
src/http_client/: cb.rs  config.rs  errors.rs  metrics.rs  middleware.rs  mod.rs  tracing.rs
src/kafka/: mod.rs
src/layers/: buffer.rs  cb.rs  cors.rs  ext.rs  mod.rs  rate.rs  request_id.rs  timeout.rs  util.rs
src/logging/: json.rs  mod.rs  span.rs
src/metrics/: mod.rs
src/metrics/text_exporter/: exporter.rs  mod.rs  resource_selector.rs  serialize.rs
src/reexport/: mod.rs
src/tracing/: mod.rs  reqwest.rs
src/util/: env.rs  fs.rs  mod.rs
templates/: index.html.j2  rapidoc.html.j2
uxum-handler-macros/: Cargo.toml
uxum-handler-macros/src/: body.rs  case.rs  handler.rs  lib.rs  parse.rs  path.rs
uxum-macros/: Cargo.toml
uxum-macros/src/: case.rs  lib.rs  util.rs
uxum-macros/src/handler/: body.rs  data.rs  doc.rs  external_doc.rs  mod.rs  path.rs  path_param.rs  query.rs  response.rs  server.rs  spec.rs  state.rs
uxum-pools/: Cargo.toml  README.md
uxum-pools/src/: error.rs  lib.rs  metrics.rs  resource.rs
uxum-pools/src/async/: mod.rs  pool.rs
uxum-pools/src/async/impls/: bb8.rs  deadpool.rs  mod.rs
uxum-pools/src/sync/: mod.rs  pool.rs
uxum-pools/src/sync/impls/: dummy.rs  mod.rs  r2d2.rs
