[package]
name = "uxum"
version = "0.6.0"
authors = ["Alex Unigovsky <unik@devrandom.ru>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/unikmhz/uxum"
description = "Opinionated backend service framework based on axum"
readme = "README.md"
keywords = ["axum", "http", "web", "framework", "server"]
categories = ["asynchronous", "network-programming", "web-programming::http-server"]
exclude = [".gitignore"]

[workspace]
resolver = "2"
members = [
    "examples/advanced_server",
    "examples/basic_server",
    "examples/inner_service",
    "examples/minimal",
    "examples/redis-kv",
    "uxum-macros",
    "uxum-pools",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
publish = true
push = true
pre-release-commit-message = "uxum {{version}}"
sign-commit = false
sign-tag = false
tag-message = "uxum {{version}}"

[dependencies]
uxum-macros = { path = "uxum-macros", version = "0.4" }

argon2 = "0.5"
askama = "0.13"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
bytes = { version = "1.10", features = ["serde"] }
config = { version = "0.15", features = ["yaml"] }
dashmap = "6.1"
forwarded-header-value = "0.1"
futures = "0.3"
gettid = "0.1"
governor = "0.10"
humantime-serde = "1.1"
http = "1.3"
hyper = { version = "1.6", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server"] }
inventory = "0.3"
iso8601-duration = "0.2"
maplit = "1.0"
mime = "0.3"
okapi = { version = "0.7", features = ["preserve_order"] }
once_cell = "1.21"
parking_lot = "0.12"
pin-project = "1.1"
opentelemetry = { version = "0.29", features = ["metrics"] }
opentelemetry-otlp = { version = "0.29", features = ["trace", "metrics", "logs", "grpc-tonic", "zstd-tonic", "tls-roots"] }
opentelemetry-resource-detectors = "0.8"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "spec_unstable_metrics_views"] }
opentelemetry-prometheus = { version = "0.29", features = ["prometheus-encoding"] }
opentelemetry-semantic-conventions = "0.29"
password-hash = { version = "0.5", features = ["alloc"] }
problemdetails = { version = "0.5", features = ["axum"] }
prometheus = "0.14"
prost = { version = "0.13", optional = true }
recloser = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "hickory-dns", "http2", "json", "macos-system-configuration", "rustls-tls-native-roots"] }
reqwest-middleware = { version = "0.4", features = ["multipart", "json"] }
reqwest-tracing = { version = "0.5.7", features = ["opentelemetry_0_29"] }
subtle = "2.5"
rustls = { version = "0.23", features = ["std", "aws_lc_rs", "custom-provider"] }
schemars = { version = "0.8", features = ["bytes", "chrono", "preserve_order", "semver", "url"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc", "arbitrary_precision", "preserve_order"] }
socket2 = { version = "0.5" }
thiserror = "2.0"
tonic = { version = "0.13", optional = true }
tonic_012 = { version = "0.12.3", package = "tonic" }
tokio = { version = "1.44", features = ["full"] }
tower = { version = "0.5", features = ["buffer", "filter", "limit", "retry", "timeout", "util"] }
tower-http = { version = "0.6", features = ["catch-panic", "cors", "request-id", "sensitive-headers", "set-header", "trace", "util"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-opentelemetry = "0.30"
tracing-serde = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time", "parking_lot", "time", "tracing-log"] }
url = { version = "2.5", features = ["serde"] }

[features]
default = []
grpc = ["prost", "tonic"]
systemd = ["libsystemd"]

[target.'cfg(target_os = "linux")'.dependencies]
libsystemd = { version = "0.7", optional = true }
