[package]
name = "uxum"
version = "0.10.0-alpha.1"
authors = ["Alex Unigovsky <unik@devrandom.ru>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/unikmhz/uxum"
description = "Opinionated backend service framework based on axum"
readme = "README.md"
keywords = ["axum", "http", "web", "framework", "server"]
categories = ["asynchronous", "network-programming", "web-programming::http-server"]
exclude = [".gitignore"]

[workspace]
resolver = "2"
members = [
    "examples/advanced_server",
    "examples/basic_server",
    "examples/custom_layer",
    "examples/inner_service",
    "examples/minimal",
    "examples/redis-kv",
    "uxum-macros",
    "uxum-pools",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
publish = true
push = true
pre-release-commit-message = "uxum {{version}}"
sign-commit = false
sign-tag = false
tag-message = "uxum {{version}}"

[dependencies]
uxum-macros = { path = "uxum-macros", version = "=0.4.2" }

argon2 = { version = "0.6.0-rc.8", features = ["alloc", "getrandom", "password-hash"], optional = true }
askama = "0.16"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
bytes = { version = "1.11", features = ["serde"] }
config = { version = "0.15", features = ["yaml"] }
dashmap = "6.2"
deboog = "0.4"
dyn-clone = "1.0"
forwarded-header-value = "0.1"
futures = "0.3"
# XXX: gettid 0.1.4 breaks on systems with a really ancient libc.
gettid = "=0.1.3"
governor = "0.10"
humantime-serde = "1.1"
http = "1.4"
hyper = { version = "1.10", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server"] }
inventory = "0.3"
iso8601-duration = "0.2"
jsonwebtoken = { version = "10", features = ["aws_lc_rs", "use_pem"], optional = true }
maplit = "1.0"
mime = "0.3"
okapi = { version = "0.7", features = ["preserve_order"] }
parking_lot = "0.12"
pin-project = "1.1"
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "metrics", "logs", "grpc-tonic", "zstd-tonic", "tls-roots"] }
opentelemetry-resource-detectors = "0.10"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "metrics", "experimental_metrics_custom_reader"] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry-stdout = { version = "0.31", features = ["trace", "metrics", "logs"] }
password-hash = { version = "0.6", features = ["alloc", "phc"] }
pbkdf2 = { version = "0.13", features = ["alloc", "getrandom", "password-hash", "phc"], optional = true }
problemdetails = { version = "0.7", features = ["axum"] }
prometheus = "0.14"
prost = { version = "0.14", optional = true }
rdkafka = { version = "0.39", features = ["ssl", "ssl-vendored", "zstd"], optional = true }
recloser = "1.1"
regex = "1.11.2"
reqwest = { version = "0.12", default-features = false, features = ["charset", "hickory-dns", "http2", "json", "macos-system-configuration", "rustls-tls-native-roots"] }
reqwest-middleware = { version = "0.4", features = ["multipart", "json"] }
subtle = "2.6"
rustls = { version = "0.23", features = ["std", "aws_lc_rs", "custom-provider"] }
schemars = { version = "0.8", features = ["bytes", "chrono", "preserve_order", "semver", "url"] }
scrypt = { version = "0.12", features = ["alloc", "getrandom", "password-hash", "phc"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc", "arbitrary_precision", "preserve_order"] }
smartstring = "1.0"
# NOTE: pinned to an exact patch version — socket2 changes frequently and has
# broken backwards compatibility across patch releases. The `all` feature is
# required for the socket options used in `builder::server` (TOS, MSS, buffers).
socket2 = { version = "=0.6.4", features = ["all"] }
spiffe = { version = "0.16", features = ["tracing"], optional = true }
spiffe-rustls = { version = "0.7", default-features = false, features = ["aws-lc-rs", "parking-lot"], optional = true }
thiserror = "2.0"
tonic = { version = "0.14", features = ["tls-native-roots"], optional = true }
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7"
tower = { version = "0.5", features = ["buffer", "filter", "limit", "retry", "timeout", "util"] }
tower-http = { version = "0.6", features = ["catch-panic", "cors", "request-id", "sensitive-headers", "set-header", "trace", "util"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-opentelemetry = "0.32"
tracing-serde = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time", "parking_lot", "time", "tracing-log"] }
url = { version = "2.5", features = ["serde"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[dev-dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }

[features]
default = ["hash_argon2"]
full = ["grpc", "hash_all", "jwt", "kafka", "spiffe", "systemd"]

grpc = ["dep:prost", "dep:tonic"]
hash_argon2 = ["dep:argon2"]
hash_pbkdf2 = ["dep:pbkdf2"]
hash_scrypt = ["dep:scrypt"]
hash_all = ["hash_argon2", "hash_pbkdf2", "hash_scrypt"]
jwt = ["dep:jsonwebtoken"]
kafka = ["dep:rdkafka"]
spiffe = ["dep:spiffe", "dep:spiffe-rustls"]
systemd = ["dep:libsystemd"]

[target.'cfg(target_os = "linux")'.dependencies]
libsystemd = { version = "0.7", optional = true }
