[package]
name = "uxum-handler-macros"
version = "0.1.0"
authors = ["Alex Unigovsky <unik@devrandom.ru>"]
license = "MIT OR Apache-2.0"
edition = "2021"
#repository = ""
#description = ""
#readme = ""
#keywords = []
#categories = []

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
