[package]
name = "uxum-macros"
version = "0.1.0"
authors = ["Alex Unigovsky <unik@devrandom.ru>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/unikmhz/uxum"
description = "Procedural macros for uxum framework"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8"
darling = "0.20.10"
mime = "0.3"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = "2.0"
