[package]
name = "uxum-macros"
version = "0.4.1"
authors = ["Alex Unigovsky <unik@devrandom.ru>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/unikmhz/uxum"
description = "Procedural macros for uxum framework"
readme = "../README.md"

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
publish = true
push = true
pre-release-commit-message = "uxum-macros {{version}}"
sign-commit = false
sign-tag = false
tag-message = "uxum-macros {{version}}"

[dependencies]
convert_case = "0.8"
darling = "0.21.3"
mime = "0.3"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
regex = "1.11"
syn = "2.0"
