[package]
name = "advanced_server"
version = "0.1.0"
authors = ["Alex Unigovsky <unik@devrandom.ru>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/unikmhz/uxum"
description = "UXUM framework - example kitchen sink service with advanced features"
publish = false

[dependencies]
prost = "0.13"
rand = "0.9"
serde = {version = "1.0", features = ["derive"]}
thiserror = "2.0"
tonic = "0.13"
tonic-reflection = "0.13"
uxum = {path = "../..", features = ["grpc", "systemd"]}
tracing = {version = "0.1", features = ["std"]}
rustls = "0.23.31"

[build-dependencies]
tonic-build = "0.13"
