[package]
name = "custom_layer"
version = "0.1.0"
authors = ["Alex Unigovsky <unik@devrandom.ru>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/unikmhz/uxum"
description = "UXUM framework - custom layer example"
publish = false

[dependencies]
uxum = { path = "../.." }
aliri = "0.6.4"
aliri_tower = "0.6.1"
aliri_oauth2 = "0.10.2"
tower-http = { version = "=0.5.2", features = ["validate-request"] }
tracing = {version = "0.1", features = ["std"]}