[package]
name = "redis-kv"
version = "0.1.0"
authors = ["Alex Unigovsky <unik@devrandom.ru>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/unikmhz/uxum"
description = "UXUM framework - example Redis KV getter/setter API service"
publish = false

[dependencies]
anyhow = "1.0"
bb8 = "0.9"
bb8-redis = "0.22"
clap = {version = "4.5", features = ["derive", "env"]}
humantime-serde = "1.1"
serde = {version = "1.0", features = ["derive"]}
thiserror = "2.0"
uxum = {path = "../.."}
uxum-pools = {path = "../../uxum-pools", features = ["bb8"]}
